# bevprog2_bead1

./: CMakeLists.txt  README.md  ideas.md
assets/: snow1.kep  snow2.kep  snow3.kep  snow4.kep  snow5.kep  snow6.kep
src/: color.cpp  color.h  main.cpp  vector_2.cpp  vector_2.h
